# gradient-skins

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ci.yml
gradient-skins/: __main__.py  mappings.py
